# bevy_egui_channel

./: Cargo.toml  README.md
.github/workflows/: rust.yml
event_traits/: Cargo.toml
event_traits/src/: lib.rs
examples/: checkbox.rs  init.rs  simple.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  events.rs  lib.rs  prelude.rs  value.rs  wrapper.rs
src/wrapper/: channel.rs
