[package]
name = "bevy_egui_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false } 
bevy_egui_events_macros = { path = "macros" }
event_traits = { path = "event_traits" }