[package]
name = "bevy_egui_events_macros"
description = "Proc macros for bevy_egui_events"
version = "0.1.0"
edition = "2021"
authors = ["GodGotzi"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.3.1"
bevy_macro_utils = "0.11.0"
event_traits = { path = "../event_traits" }
syn = "2.0.25"
proc-macro2 = "1.0"
quote = "1.0"